# 5-5InheritedObjectListProperty

./: README.adoc
ObjectListInheritedProperties/: CMakeLists.txt
ObjectListInheritedProperties/main/: CMakeLists.txt
ObjectListInheritedProperties/main/inc/: defender.hpp  footballteam.hpp  player.hpp  stricker.hpp
ObjectListInheritedProperties/main/qml/: Main.qml
ObjectListInheritedProperties/main/src/: defender.cpp  footballteam.cpp  main.cpp  player.cpp  stricker.cpp
